--- a/reimbursement_react/package.json
+++ b/reimbursement_react/package.json
@@ -7,13 +7,15 @@
     "jquery": "^3.3.1",
     "popper.js": "^1.14.5",
     "react": "^16.6.3",
+    "react-alert": "^4.0.4",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.6.3",
     "react-icons": "^3.2.2",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
-    "react-tether": "^1.0.3"
+    "react-tether": "^1.0.3",
+    "reactstrap": "^6.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
